--- a/latihan11.html
+++ b/latihan11.html
@@ -32,7 +32,7 @@
                 for (s of siswa){
                     let ket = (s.nilai >= 60) ? "Lulus" : "Gagal";
                     let grade = " ";
-                    let predikat
+                    let predikat;
 
                     if(s.nilai > 85 && s.nilai <= 100 ) grade = "A";
                     else if(s.nilai > 75 && s.nilai <=85) grade = "B";
